# for display continuity sake please use 2 spaces instead of tabs

2013-06-09 Matthias Scholz <ms@jammerhund.de>
  * Improved vertex distance mode in the measurement tool. Now the new relative
    mode and the cumulative mode are independent usable. Take care that the 
    distance is not upside down for relative mode. Thanks to Michael for his
    hints.

2013-06-06 Matthias Scholz <ms@jammerhund.de>
  * Small enhancement of the mesarement tool:
    now you can show the distance between the vertices in a relative mode too.

2013-06-02 mmichaud <michael.michaud@free.fr>
  * Fix a bug in Union/Merge plugin and improve it so that it
    can be up to 2 times faster (avoid computing union 2 times)

* release 1.6.3 ***************************************************************

2013-05-27 Giuseppe Aruta (giuseppe_aruta@yahoo.it)
   * Add two simple plugins for Sextante raster layers
   * a) RasterLayerPropertiesPlugin which displays raster properties (extension,
        name, bands, etc), to Sextante Raster Layer Context menu
   * b) RasterQueryPlugIn to inspect pixels on raster layer, to Raster Toolbar menu

2013-05-26 ede
  * main menu Window, put "Clone' before 'Synchronization', as they belong together

2013-05-25 mmichaud <michael.michaud@free.fr>
  * 3613870 fixed : cloning sextante raster layer was creating a unique name
  * 3612322 fixed :  "Create point grid", "Create lattice" and "Raster profile"
    does not throw a NPE on a pasted Sextante Raster Layer any more

2013-05-24 Matthias Scholz <ms@jammerhund.de>
  * AddDatastoreLayerPanel.populateDatasetComboBox():
      avoid a NPE, if there are no spatial enabled tables in this database

2013-05-21 mmichaud <michael.michaud@free.fr>
  * second tentative to fix 3613603

2013-05-20 ede
  * bugfix 3613603: NPE thrown by LayerNamePanel
    https://sourceforge.net/tracker/?func=detail&atid=679906&aid=3613603&group_id=118054
  * minor performance enhancement for LayerNameTree selection
